code clean up